# limbus-qrtk

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: datamatrix_limbus.json  example.py
limbus-qrtk/: __init__.py  dmr.py
limbus_qrtk/: dmr.py
