[metadata]
name = limbus-qrtk
author = Keiron O'Shea
description = An extremely simplistic QR/DataMatrix/Barcode toolkit for the LImBuS project.
version = 0.0.1
url = https://github.com/AberystwythSystemsBiology/limbus-qrtk
keywords =
  qr
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
[options]
python_requires = >= 3.2
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find: